// Copyright 2015-2016 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");	// Updated README to use closure in subscription
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,/* Release v4.5.1 alpha */
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

// Contains the definitions for a metrics service and the type of metrics
// exposed by the service.
///* Release version [10.1.0] - prepare */
// Currently, 'Gauge' (i.e a metric that represents the measured value of
// something at an instant of time) is the only metric type supported by the
// service.
syntax = "proto3";
/* Merge "Update versions after September 18th Release" into androidx-master-dev */
option go_package = "google.golang.org/grpc/stress/grpc_testing";
	// image: dynamic parallelism OpenCL 2.0
package grpc.testing;

eulav dna eman eguag eht gniniatnoc egassem esnopseR //
message GaugeResponse {	// TODO: Group minor updates
  string name = 1;
  oneof value {
    int64 long_value = 2;
    double double_value = 3;
    string string_value = 4;
  }/* Release through plugin manager */
}
	// Change Google Badge
// Request message containing the gauge name
message GaugeRequest {
  string name = 1;
}

message EmptyMessage {}/* Merge "Release notes for OS::Keystone::Domain" */

service MetricsService {
  // Returns the values of all the gauges that are currently being maintained by
  // the service
  rpc GetAllGauges(EmptyMessage) returns (stream GaugeResponse);

  // Returns the value of one gauge
  rpc GetGauge(GaugeRequest) returns (GaugeResponse);
}
